--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
             height: 100%;
         }
 
+        #sidebar {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 200px;
+            height: 100%;
+            background-color: #f0f0f0;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
         #status-bar {
             position: absolute;
             bottom: 10px;
@@ -25,6 +39,11 @@
     </style>
 </head>
 <body>
+    <div id="sidebar">
+        <h2>Options</h2>
+        <button id="clear-storage-btn">Clear Storage</button>
+    </div>
+
     <h1>Chip Manufacturer - Incremental Idle Game</h1>
     <p>Click the button to produce computer chips!</p>
     <p>Computer Chips: <span id="chips">0</span></p>
@@ -86,6 +105,7 @@
         const centerCostDisplay = document.getElementById('center-cost');
         const upgradeCostDisplay = document.getElementById('upgrade-cost');
         const statusBar = document.getElementById('status-bar');
+        const clearStorageButton = document.getElementById('clear-storage-btn');
 
         // Function to update display
         function updateDisplay() {
@@ -145,15 +165,6 @@
             }
         });
 
-        // Function to automatically produce chips per second
-        function produceChipsPerSec() {
-            chips += chipsPerSec * manufacturingEfficiencyMultiplier;
-            chipsDisplay.textContent = chips.toFixed(2);
-        }
-
-        // Start producing chips per second
-        setInterval(produceChipsPerSec, 1000);
-
         // Add a chip manufacturing facility
         function addFacility(facilityType) {
             let facilityCost;
@@ -208,6 +219,19 @@
             } else {
                 alert('Not enough credits to upgrade!');
             }
+        });
+
+        // Function to clear local storage and reset game progress
+        clearStorageButton.addEventListener('click', function() {
+            localStorage.removeItem('chipGameSave');
+            chips = 0;
+            credits = 0;
+            chipsPerSec = 0;
+            manufacturingEfficiencyMultiplier = 1;
+            plantCost = 10;
+            lineCost = 20;
+            centerCost = 30;
+            updateDisplay();
         });
     </script>
 </body>
