--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         .toast.show {
             opacity: 1;
         }
+
+        /* Hide auto-sell checkbox by default */
+        #auto-sell-checkbox-container {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -99,8 +104,11 @@
     <h2>Upgrades</h2>
     <p>Upgrade Cost: <span id="upgrade-cost">50</span> Credits</p>
     <button id="upgrade-btn">Upgrade Manufacturing Efficiency</button>
-    <input type="checkbox" id="auto-sell-checkbox">
-    <label for="auto-sell-checkbox">Auto-sell Chips (Cost: 100 Credits)</label>
+
+    <div id="auto-sell-checkbox-container">
+        <input type="checkbox" id="auto-sell-checkbox">
+        <label for="auto-sell-checkbox">Auto-sell Chips (Cost: 100 Credits)</label>
+    </div>
 
     <div id="toast-container"></div>
     <div id="status-bar"></div>
@@ -150,7 +158,7 @@
         const shopCostDisplay = document.getElementById('shop-cost');
         const bigShopCostDisplay = document.getElementById('big-shop-cost');
         const upgradeCostDisplay = document.getElementById('upgrade-cost');
-        const autoSellCheckbox = document.getElementById('auto-sell-checkbox');
+        const autoSellCheckboxContainer = document.getElementById('auto-sell-checkbox-container');
         const statusBar = document.getElementById('status-bar');
         const clearStorageButton = document.getElementById('clear-storage-btn');
         const buyShopButton = document.getElementById('buy-shop-btn');
@@ -168,7 +176,11 @@
             shopCostDisplay.textContent = shopCost;
             bigShopCostDisplay.textContent = bigShopCost;
             upgradeCostDisplay.textContent = manufacturingEfficiencyUpgradeCost;
-            autoSellCheckbox.checked = autoSellEnabled;
+
+            // Show auto-sell checkbox if auto-sell upgrade is purchased
+            if (autoSellEnabled) {
+                autoSellCheckboxContainer.style.display = 'block';
+            }
         }
 
         // Function to update chips and chips per second
@@ -331,10 +343,15 @@
         });
 
         // Function to enable/disable auto-selling of chips
-        autoSellCheckbox.addEventListener('change', function() {
-            autoSellEnabled = this.checked;
-            updateDisplay();
-        });
+        function enableAutoSell() {
+            if (credits >= 100) {
+                credits -= 100;
+                autoSellEnabled = true;
+                updateDisplay();
+            } else {
+                showToast('Not enough credits to purchase auto-sell upgrade!');
+            }
+        }
 
         // Function to clear local storage and reset game progress
         clearStorageButton.addEventListener('click', function() {
@@ -367,6 +384,11 @@
                     }, 300);
                 }, 3000);
             }, 100);
+        }
+
+        // Check if auto-sell upgrade is purchased, then show checkbox
+        if (autoSellEnabled) {
+            autoSellCheckboxContainer.style.display = 'block';
         }
     </script>
 </body>
